# francies-with-rust

./: Cargo.toml
src/: main.rs
src/modules/: mod.rs
src/modules/auth/: controller.rs  mod.rs  service.rs
src/modules/auth/dto/: mod.rs  user_validate.rs
src/modules/default/: controller.rs  mod.rs
src/shared/structs/: response.rs
