[package]
name = "francies-with-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
rocket_cors = "0.6.0"
rocket_okapi = { version = "0.8.0", features = ["swagger"] }
schemars = "0.8.21"
serde = "1.0.203"
serde_json = "1.0.117"
validator = { version = "0.18.1", features = ["derive"] }
